--- a/plugins/DeluxeMenus/gui_menus/cosmetics/cosmetics_projectileeffects_1.yml
+++ b/plugins/DeluxeMenus/gui_menus/cosmetics/cosmetics_projectileeffects_1.yml
@@ -4,9 +4,6 @@ size: 54
 update_interval: 1
 
 items:
-
-
-
   'clear_all_cosmetics':
     material: REDSTONE
     slot: 0
@@ -17,20 +14,13 @@ items:
       - HIDE_ENCHANTS
     lore:
       - ''
-      - '&7Clear all your cosmetics'
+      - '&7Xóa tất cả cosmetics của bạn'
       - ''
-      - '&e➥ Left-Click to clear'
+      - '&e➥ Click trái để xóa'
     left_click_commands:
       - "[console] eglow:eglow set %player_name% none"
       - "[console] ultracosmetics clear %player_name%"
-      - "[message] &8[&6&l!&8] &6&lCosmetics &8→ &7You have cleared all your cosmetics!"
-
-
-
-
-
-
-
+      - "[message] &8[&6&l!&8] &6&lCosmetics &8→ &7Bạn đã xóa tất cả cosmetics!"
 
   'cosmetics_pets':
     material: WOLF_SPAWN_EGG
@@ -41,9 +31,9 @@ items:
       - HIDE_ATTRIBUTES
       - HIDE_ENCHANTS
     lore:
-      - '&7Cosmetics Category'
+      - '&7Danh mục Cosmetics'
       - ''
-      - '&e➥ Left-Click to open'
+      - '&e➥ Click trái để mở'
     left_click_commands:
       - "[openguimenu] cosmetics_pets_1"
 
@@ -56,9 +46,9 @@ items:
       - HIDE_ATTRIBUTES
       - HIDE_ENCHANTS
     lore:
-      - '&7Cosmetics Category'
+      - '&7Danh mục Cosmetics'
       - ''
-      - '&e➥ Left-Click to open'
+      - '&e➥ Click trái để mở'
     left_click_commands:
       - "[openguimenu] cosmetics_hats_1"
 
@@ -71,9 +61,9 @@ items:
       - HIDE_ATTRIBUTES
       - HIDE_ENCHANTS
     lore:
-      - '&7Cosmetics Category'
+      - '&7Danh mục Cosmetics'
       - ''
-      - '&e➥ Left-Click to open'
+      - '&e➥ Click trái để mở'
     left_click_commands:
       - "[openguimenu] cosmetics_particles_1"
 
@@ -86,9 +76,9 @@ items:
       - HIDE_ATTRIBUTES
       - HIDE_ENCHANTS
     lore:
-      - '&7Cosmetics Category'
+      - '&7Danh mục Cosmetics'
       - ''
-      - '&e➥ Left-Click to open'
+      - '&e➥ Click trái để mở'
     left_click_commands:
       - "[openguimenu] cosmetics_projectileeffects_1"
 
@@ -101,24 +91,11 @@ items:
       - HIDE_ATTRIBUTES
       - HIDE_ENCHANTS
     lore:
-      - '&7Cosmetics Category'
+      - '&7Danh mục Cosmetics'
       - ''
-      - '&e➥ Left-Click to open'
+      - '&e➥ Click trái để mở'
     left_click_commands:
       - "[openguimenu] cosmetics_deatheffects_1"
-
-
-
-
-
-
-
-
-
-
-
-
-
 
   'locked_Rainbow':
     material: BARRIER
@@ -132,10 +109,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -155,15 +132,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Rainbow"
     priority: 2
-
-
-
 
   'locked_Christmas':
     material: BARRIER
@@ -177,10 +151,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -200,15 +174,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Christmas"
     priority: 2
-
-
-
 
   'locked_Spark':
     material: BARRIER
@@ -222,10 +193,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -245,15 +216,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Spark"
     priority: 2
-
-
-
 
   'locked_Redstone':
     material: BARRIER
@@ -267,10 +235,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -290,15 +258,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Redstone"
     priority: 2
-
-
-
 
   'locked_Flame':
     material: BARRIER
@@ -312,10 +277,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -335,15 +300,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Flame"
     priority: 2
-
-
-
 
   'locked_Water':
     material: BARRIER
@@ -357,10 +319,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -380,15 +342,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Water"
     priority: 2
-
-
-
 
   'locked_Witch':
     material: BARRIER
@@ -402,10 +361,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -425,15 +384,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Witch"
     priority: 2
-
-
-
 
   'locked_Emerald':
     material: BARRIER
@@ -447,10 +403,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -470,15 +426,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Emerald"
     priority: 2
-
-
-
 
   'locked_Note':
     material: BARRIER
@@ -492,10 +445,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -515,15 +468,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Note"
     priority: 2
-
-
-
 
   'locked_Love':
     material: BARRIER
@@ -537,10 +487,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -560,15 +510,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Love"
     priority: 2
-
-
-
 
   'locked_Lava':
     material: BARRIER
@@ -582,10 +529,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -605,15 +552,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Lava"
     priority: 2
-
-
-
 
   'locked_Snow':
     material: BARRIER
@@ -627,10 +571,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -650,15 +594,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Snow"
     priority: 2
-
-
-
 
   'locked_Slime':
     material: BARRIER
@@ -672,10 +613,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -695,15 +636,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Slime"
     priority: 2
-
-
-
 
   'locked_Crit':
     material: BARRIER
@@ -717,10 +655,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -740,15 +678,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Crit"
     priority: 2
-
-
-
 
   'locked_Explosion':
     material: BARRIER
@@ -762,10 +697,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -785,15 +720,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Explosion"
     priority: 2
-
-
-
 
   'locked_Cloud':
     material: BARRIER
@@ -807,10 +739,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -830,15 +762,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Cloud"
     priority: 2
-
-
-
 
   'locked_Smoke':
     material: BARRIER
@@ -852,10 +781,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -875,15 +804,12 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Smoke"
     priority: 2
-
-
-
 
   'locked_Portal':
     material: BARRIER
@@ -897,10 +823,10 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Unlock this cosmetic'
-      - '&7in the coinshop!'
+      - '&7Mở khóa cosmetic này'
+      - '&7trong coinshop!'
       - ''
-      - '&c&nLocked'
+      - '&c&nĐã khóa'
     view_requirement:
       requirements:
         permission:
@@ -920,16 +846,9 @@ items:
     lore:
       - '&8Cosmetic Item'
       - ''
-      - '&7Toggle this cosmetic!'
+      - '&7Bật/tắt cosmetic này!'
       - ''
-      - '&e➥ Left-Click to toggle'
+      - '&e➥ Click trái để bật/tắt'
     click_commands:
       - "[player] ultracosmetics toggle projectile_effects Portal"
     priority: 2
-
-
-
-
-
-
-
